Fixed z-indexing.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,13 +3,14 @@ body {
   width: 100%;
   height: 100%;
   position: absolute;
+  background-color: #001217;
 }
 
 canvas {
     position:absolute;
     width: 100%;
     height: 100%;
-    z-index: 2;
+    z-index: 1;
 }
 
 #graph-info {
@@ -27,12 +28,6 @@ canvas {
   top: 0;
   right: 0;
   z-index: 10;
-}
-
-#graph{
-  width: 100%;
-  height:100%;
-  background-color: #001217;
 }
 
 #searchBlur{
